@@ -1,3 +1,8 @@
+2016-05-15 Riccardo Mottola <rm@gnu.org>
+
+	* Modules/Debuggers/ProjectCenter/PCDebugger.m
+	On windows kill with DebugBreakProcess() and not tskill. Available only on WinXP or higher.
+
 2016-05-05 15:43-EDT Gregory John Casamento <greg.casamento@gmail.com>
 
 	* Modules/Debuggers/ProjectCenter/PipeDelegate.m: Minor changes.
